force-app/main/default/objects/Account/fields/GM_Lead_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>GM_Lead_Rep_Code__c</fullName>
    <label>GM Lead Rep Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6750</fullName>
            </value>
            <value>
                <fullName>6778</fullName>
            </value>
            <value>
                <fullName>6779</fullName>
            </value>
            <value>
                <fullName>6780</fullName>
            </value>
            <value>
                <fullName>6789</fullName>
            </value>
            <value>
                <fullName>6050</fullName>
            </value>
            <value>
                <fullName>6745</fullName>
            </value>
            <value>
                <fullName>6747</fullName>
            </value>
            <value>
                <fullName>6751</fullName>
            </value>
            <value>
                <fullName>6752</fullName>
            </value>
            <value>
                <fullName>6753</fullName>
            </value>
            <value>
                <fullName>6755</fullName>
            </value>
            <value>
                <fullName>6756</fullName>
            </value>
            <value>
                <fullName>6757</fullName>
            </value>
            <value>
                <fullName>6758</fullName>
            </value>
            <value>
                <fullName>6759</fullName>
            </value>
            <value>
                <fullName>6760</fullName>
            </value>
            <value>
                <fullName>6776</fullName>
            </value>
            <value>
                <fullName>6781</fullName>
            </value>
            <value>
                <fullName>6782</fullName>
            </value>
            <value>
                <fullName>6783</fullName>
            </value>
            <value>
                <fullName>6785</fullName>
            </value>
            <value>
                <fullName>6786</fullName>
            </value>
            <value>
                <fullName>6788</fullName>
            </value>
            <value>
                <fullName>6790</fullName>
            </value>
            <value>
                <fullName>6791</fullName>
            </value>
            <value>
                <fullName>6792</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>