force-app/main/default/objects/Account/fields/GM_Notes__c.field-meta.xml
<CustomField>
    <fullName>GM_Notes__c</fullName>
    <inlineHelpText>For data migration purposes only</inlineHelpText>
    <label>GM Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>