force-app/main/default/objects/Account/fields/GMID__c.field-meta.xml
<CustomField>
    <fullName>GMID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>For Data Migration purposes only. Goldmine GUID.</inlineHelpText>
    <label>GMID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>