force-app/main/default/objects/Account/fields/Growing_HomeBuilders_Ministry__c.field-meta.xml
<CustomField>
    <fullName>Growing_HomeBuilders_Ministry__c</fullName>
    <description>Global Dept Use:  Growing Number of Homebuilders groups in Country</description>
    <inlineHelpText>There is a growing number of HomeBuilders groups in the country.</inlineHelpText>
    <label>Growing HomeBuilders Ministry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>