force-app/main/default/objects/Account/fields/Guides__c.field-meta.xml
<CustomField>
    <fullName>Guides__c</fullName>
    <inlineHelpText>Group Leaders - those who lead small groups 
Network Leaders - those who lead a group of group leaders 
Movement Leaders - those who a self-sustained, larger scope (i.e. a city) working with multiple networks of disciple makers</inlineHelpText>
    <label>Guides</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group Leader</fullName>
            </value>
            <value>
                <fullName>Network Leader</fullName>
            </value>
            <value>
                <fullName>Movement Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>