force-app/main/default/objects/Account/fields/High_Quality_Events__c.field-meta.xml
<CustomField>
    <fullName>High_Quality_Events__c</fullName>
    <description>Global Team Use:  High-quality events in country?</description>
    <inlineHelpText>There are high-quality events the ministry to couples (or singles) AND invite them to become involved by reaching others.</inlineHelpText>
    <label>High-Quality Events</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>