force-app/main/default/objects/Account/fields/HomeBuilder_Type__c.field-meta.xml
<CustomField>
    <fullName>HomeBuilder_Type__c</fullName>
    <label>HomeBuilder Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Mentor</fullName>
            </value>
            <value>
                <fullName>Small Group Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>