force-app/main/default/objects/Account/fields/HomeBuilders_Leader_Training__c.field-meta.xml
<CustomField>
    <fullName>HomeBuilders_Leader_Training__c</fullName>
    <description>Global Dept Use:  Homebuilders leaders being trained in country.</description>
    <inlineHelpText>New HomeBuilders leaders are being trained by through regular, ongoing training events.</inlineHelpText>
    <label>HomeBuilders Leader Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>