force-app/main/default/objects/Account/fields/ICP_Tier__c.field-meta.xml
<CustomField>
    <fullName>ICP_Tier__c</fullName>
    <description>Where does this household fit in the ideal customer profile?</description>
    <label>ICP Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1 – Young &amp; Growing Married Families</fullName>
            </value>
            <value>
                <fullName>Tier 2 – Newly Married &amp; Maturing Families</fullName>
            </value>
            <value>
                <fullName>Tier 3 – Transitioning &amp; Legacy Families</fullName>
            </value>
            <value>
                <fullName>Tier 4 – Singles</fullName>
            </value>
            <value>
                <fullName>Tier 4 - Commerce Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>