force-app/main/default/objects/Account/fields/Initial_Media_Code__c.field-meta.xml
<CustomField>
    <fullName>Initial_Media_Code__c</fullName>
    <label>Initial Media Code</label>
    <length>75</length>
    <type>Text</type>
</CustomField>