force-app/main/default/objects/Account/fields/Initial_Media_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Media_Date__c</fullName>
    <label>Initial Media Date</label>
    <type>Date</type>
</CustomField>