force-app/main/default/objects/Account/fields/IPP_Tier__c.field-meta.xml
<CustomField>
    <fullName>IPP_Tier__c</fullName>
    <label>IPP Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 0 - Influence Class</fullName>
            </value>
            <value>
                <fullName>Tier 1 - Ministry Class</fullName>
            </value>
            <value>
                <fullName>Tier 2 - Investment Class</fullName>
            </value>
            <value>
                <fullName>Tier 3 - Commerce Class</fullName>
            </value>
            <value>
                <fullName>Tier 4 - Outer Edge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>