force-app/main/default/objects/Account/fields/Key_Couple__c.field-meta.xml
<CustomField>
    <fullName>Key_Couple__c</fullName>
    <description>Global Dept Use - Key Couple in country</description>
    <inlineHelpText>There is a Key Couple who is “leading the charge” to plan and organize a FamilyLife ministry.</inlineHelpText>
    <label>Key Couple</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>