force-app/main/default/objects/Account/fields/Last_Annual_Review__c.field-meta.xml
<CustomField>
    <fullName>Last_Annual_Review__c</fullName>
    <description>GLOBAL DEPT USE:  Date Info was last reviewed.</description>
    <inlineHelpText>When was an annual review last conducted on this record?</inlineHelpText>
    <label>Last Annual Review</label>
    <type>Date</type>
</CustomField>