force-app/main/default/objects/Account/fields/Last_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Date__c</fullName>
    <description>Exact Date someone in the household was &quot;touched&quot; by their Donor Rep</description>
    <label>Last Touch Date</label>
    <type>Date</type>
</CustomField>