force-app/main/default/objects/Account/fields/Legacy_Industry__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Industry__c</fullName>
    <inlineHelpText>For Dynamics Data Migration only</inlineHelpText>
    <label>!Legacy Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture and Non-petrol Natural Resource Extraction</fullName>
            </value>
            <value>
                <fullName>Broadcasting Printing and Publishing</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Design, Direction and Creative Management</fullName>
            </value>
            <value>
                <fullName>Doctor&apos;s Offices and Clinics</fullName>
            </value>
            <value>
                <fullName>Durable Manufacturing</fullName>
            </value>
            <value>
                <fullName>Eating and Drinking Places</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Entertainment Retail</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Government/Federal</fullName>
            </value>
            <value>
                <fullName>Government/State</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>Petrochemical Extraction and Distribution</fullName>
            </value>
            <value>
                <fullName>Religious/Church</fullName>
            </value>
            <value>
                <fullName>Religious/Military Church</fullName>
            </value>
            <value>
                <fullName>Religious/Para-Church</fullName>
            </value>
            <value>
                <fullName>Service Retail</fullName>
            </value>
            <value>
                <fullName>Social Services</fullName>
            </value>
            <value>
                <fullName>Specialty Realty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>