force-app/main/default/objects/Account/fields/Legacy_Notes_Dynamics__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Notes_Dynamics__c</fullName>
    <inlineHelpText>Miscellaneous data from MS Dynamics data migration.</inlineHelpText>
    <label>!Legacy Notes (Dynamics)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>