force-app/main/default/objects/Account/fields/Legacy_Partner__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>!Legacy Partner</label>
    <type>Checkbox</type>
</CustomField>