force-app/main/default/objects/Account/fields/Lifetime_Caluclated__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Caluclated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lifetime Caluclated</label>
    <type>Checkbox</type>
</CustomField>