force-app/main/default/objects/Account/fields/Lift_Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Lift_Opportunity_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>How many Lift Opportunities are associated with this Account?</description>
    <inlineHelpText>How many Lift Opportunities are associated with this Account?</inlineHelpText>
    <label>Lift Opportunity Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>