force-app/main/default/objects/Account/fields/Lift_Oppty_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Lift_Oppty_Closed_Date__c</fullName>
    <description>Is populated from trigger on opportunity when a qualified opportunity is closed won, for the Giving since report</description>
    <label>Lift Oppty Closed Date</label>
    <type>Date</type>
</CustomField>