force-app/main/default/objects/Account/fields/Lives_Impacted_This_Account__c.field-meta.xml
<CustomField>
    <fullName>Lives_Impacted_This_Account__c</fullName>
    <label>Lives Impacted This Account</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>