force-app/main/default/objects/Account/fields/Local_FamilyLife_Team__c.field-meta.xml
<CustomField>
    <fullName>Local_FamilyLife_Team__c</fullName>
    <description>Global Dept Use:  Trained Local Team</description>
    <inlineHelpText>There is a local team that has been trained and is working with the key couple to plan and organize a FamilyLife ministry.</inlineHelpText>
    <label>Local FamilyLife Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>