force-app/main/default/objects/Account/fields/Longitude_and_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude_and_Latitude__c</fullName>
    <description>For use in GeoCode formulas distance from</description>
    <inlineHelpText>Enter a longitude and latitude for the capital of this country.</inlineHelpText>
    <label>Longitude and Latitude</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>