force-app/main/default/objects/Account/fields/LP_Active__c.field-meta.xml
<CustomField>
    <fullName>LP_Active__c</fullName>
    <label>LP Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>