force-app/main/default/objects/Account/fields/LP_Inception_Date__c.field-meta.xml
<CustomField>
    <fullName>LP_Inception_Date__c</fullName>
    <description>Legacy Partner Inception Date. This field is a read only field populated from information in SE through our current syncing tool.</description>
    <label>LP Inception Date</label>
    <type>Date</type>
</CustomField>