force-app/main/default/objects/Account/fields/LP_Pledge_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LP_Pledge_Frequency__c</fullName>
    <description>Frequency of Legacy Partner gift according to what the donor pledged.  This field is populated via Master Data Synch, as the source is Studio Enterprise.</description>
    <label>LP Pledge Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>O - One Time</fullName>
            </value>
            <value>
                <fullName>W - Weekly</fullName>
            </value>
            <value>
                <fullName>M - Monthly</fullName>
            </value>
            <value>
                <fullName>Q - Quarterly</fullName>
            </value>
            <value>
                <fullName>S - Semi-Annual</fullName>
            </value>
            <value>
                <fullName>A - Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>