force-app/main/default/objects/Account/fields/Mail_Hold__c.field-meta.xml
<CustomField>
    <fullName>Mail_Hold__c</fullName>
    <label>Mail Hold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Constituent Request</fullName>
            </value>
            <value>
                <fullName>Bad Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>