force-app/main/default/objects/Account/fields/Mail_Hold_Active__c.field-meta.xml
<CustomField>
    <fullName>Mail_Hold_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NOT FOR LAYOUT: Field added by Chris Collins, 11/9/2019 for syncing Mail Hold status with MDM (Semarchy). Current logic dictates a pass through of true/false and original Mail Hold field was text/picklist. This field will be populated via formula/process that will based off of original mail hold field. Anything other than &quot;None&quot; and this field will be true.</description>
    <label>Mail Hold Active</label>
    <type>Checkbox</type>
</CustomField>