force-app/main/default/objects/Account/fields/Manual_Dedupe_Group__c.field-meta.xml
<CustomField>
    <fullName>Manual_Dedupe_Group__c</fullName>
    <label>Manual Dedupe Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GM Account Group 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>