force-app/main/default/objects/Account/fields/Marriage_Ministry_in_Churches__c.field-meta.xml
<CustomField>
    <fullName>Marriage_Ministry_in_Churches__c</fullName>
    <description>Global Dept Use:  Effort to have strong marriages in country using FL resource.</description>
    <inlineHelpText>There is an intentional effort to help churches have strong marriage ministries using FamilyLife materials.</inlineHelpText>
    <label>Marriage Ministry in Churches</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>