force-app/main/default/objects/Account/fields/Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Master_ID__c</fullName>
    <label>Master ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>