force-app/main/default/objects/Account/fields/Materials_Available__c.field-meta.xml
<CustomField>
    <fullName>Materials_Available__c</fullName>
    <description>Global Dept Use:  FL Core Materials Available in Country</description>
    <inlineHelpText>Some of FamilyLife’s core materials are available locally, either via current print licenses or by import.</inlineHelpText>
    <label>Materials Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>