force-app/main/default/objects/Account/fields/MDM_Code__c.field-meta.xml
<CustomField>
    <fullName>MDM_Code__c</fullName>
    <description>This field needs to be removed from all page layouts as it is no longer used</description>
    <externalId>true</externalId>
    <label>MDM Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>