force-app/main/default/objects/Account/fields/MDM_ID__c.field-meta.xml
<CustomField>
    <fullName>MDM_ID__c</fullName>
    <externalId>true</externalId>
    <label>MDM ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>