force-app/main/default/objects/Account/fields/MDM_Sync_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>MDM_Sync_Last_Modified_Date__c</fullName>
    <description>Last Modified Date used by MDM Sync process</description>
    <label>MDM Sync Last Modified Date</label>
    <type>DateTime</type>
</CustomField>