force-app/main/default/objects/Account/fields/Merge_Index__c.field-meta.xml
<CustomField>
    <fullName>Merge_Index__c</fullName>
    <formula>npsp__Number_of_Household_Members__c *100 + IF(Portal_Account__c = TRUE, 50, IF(  Donor_Caseload_Lookup__c != NULL,30,IF( Cru_PID__c != Null, 20,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>