force-app/main/default/objects/Account/fields/Ministry_Description__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Description__c</fullName>
    <description>Global Dept Use:  Description of Ministry focus in the country.</description>
    <inlineHelpText>Brief statement (2-3 sentences) describing the focus and distinctives of the country’s FamilyLife ministry.</inlineHelpText>
    <label>Ministry Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>