force-app/main/default/objects/Account/fields/Ministry_to_Pastors__c.field-meta.xml
<CustomField>
    <fullName>Ministry_to_Pastors__c</fullName>
    <description>Global Dept Use:  Effort to strengthen pastor couples in country.</description>
    <inlineHelpText>There is an intentional effort to strengthen the marriages of pastor couples.</inlineHelpText>
    <label>Ministry to Pastors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>