force-app/main/default/objects/Account/fields/MinRep_Notes_Field__c.field-meta.xml
<CustomField>
    <fullName>MinRep_Notes_Field__c</fullName>
    <description>For MinRep Use Only.</description>
    <label>MinRep Notes</label>
    <type>TextArea</type>
</CustomField>