force-app/main/default/objects/Account/fields/ML_Caseload_Queue_Flag__c.field-meta.xml
<CustomField>
    <fullName>ML_Caseload_Queue_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used by a &quot;Account - Add to Donor Task Queue&quot; Flow to know whether or not to create a Task in the Donor Task Queue.</description>
    <label>ML Caseload Queue Flag</label>
    <type>Checkbox</type>
</CustomField>