force-app/main/default/objects/Account/fields/Monthly_Donor_WTR_Gift_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Donor_WTR_Gift_Card_Number__c</fullName>
    <label>Monthly Donor WTR Gift Card Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>