force-app/main/default/objects/Account/fields/Monthly_Donor_WTR_Gift_Card_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Donor_WTR_Gift_Card_Sent_Date__c</fullName>
    <description>Populate this field when the WTR Gift Card Number field is populated.</description>
    <label>Monthly Donor WTR Gift Card Sent Date</label>
    <type>Date</type>
</CustomField>