force-app/main/default/objects/Account/fields/Monthly_Touch__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Touch__c</fullName>
    <description>To help the reps know what months they touch a particular donor</description>
    <inlineHelpText>Please choose the month that you lasted touched/communicated with the donors</inlineHelpText>
    <label>Monthly Touch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
            <value>
                <fullName>January</fullName>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>