force-app/main/default/objects/Account/fields/Multi_City_Ministry__c.field-meta.xml
<CustomField>
    <fullName>Multi_City_Ministry__c</fullName>
    <description>Global Dept Use - FL Ministry with Key Couple - Multiple Locations</description>
    <inlineHelpText>FamilyLife has started ministry in at least one other city and there is a key couple and local team focused on building the ministry there.</inlineHelpText>
    <label>Multi-City Ministry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Strongly Disagree</fullName>
            </value>
            <value>
                <fullName>2 - Disagree</fullName>
            </value>
            <value>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </value>
            <value>
                <fullName>4 - Agree</fullName>
            </value>
            <value>
                <fullName>5 - Strongly Agree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>