force-app/main/default/objects/Account/fields/National_CCC_Website_del__c.field-meta.xml
<CustomField>
    <fullName>National_CCC_Website_del__c</fullName>
    <inlineHelpText>Enter the website associated with either Cru.  Websites for other ministries besides FamailyLife belong under that Ministry&apos;s Account Page</inlineHelpText>
    <label>National CCC Website</label>
    <type>Url</type>
</CustomField>