force-app/main/default/objects/Account/fields/National_FL_Facebook_Page_del__c.field-meta.xml
<CustomField>
    <fullName>National_FL_Facebook_Page_del__c</fullName>
    <description>Global Use Only</description>
    <inlineHelpText>Copy and Paste the link from the Facebook page into this field</inlineHelpText>
    <label>National FL Facebook Page</label>
    <type>Url</type>
</CustomField>