force-app/main/default/objects/Account/fields/National_FL_Website_del__c.field-meta.xml
<CustomField>
    <fullName>National_FL_Website_del__c</fullName>
    <inlineHelpText>Enter the website associated with FamilyLife in that Country. Websites for other ministries besides CRU belong under that Ministry&apos;s Account Page</inlineHelpText>
    <label>National FL Website</label>
    <type>Url</type>
</CustomField>