force-app/main/default/objects/Account/fields/Nbr_of_Full_Time_Staff__c.field-meta.xml
<CustomField>
    <fullName>Nbr_of_Full_Time_Staff__c</fullName>
    <defaultValue>0</defaultValue>
    <description>GLOBAL DEPT USE:  Number of Full Time staff</description>
    <inlineHelpText>How many staff have FamilyLife as their Primary ministry assignment?</inlineHelpText>
    <label>Nbr of Full Time Staff</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>