force-app/main/default/objects/Account/fields/Nbr_of_Volunteeers__c.field-meta.xml
<CustomField>
    <fullName>Nbr_of_Volunteeers__c</fullName>
    <defaultValue>0</defaultValue>
    <description>GLOBAL DEPT USE:  Estimated number of volunteers working in the country.</description>
    <inlineHelpText>How many (estimated) volunteers are working in the country?</inlineHelpText>
    <label>Nbr of Volunteeers</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>