force-app/main/default/objects/Account/fields/Next_Steps_for_Country__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_for_Country__c</fullName>
    <description>Global Dept Use:  Country&apos;s short term goals</description>
    <inlineHelpText>What does the country want to accomplish in the short term? What help or training do they need next? What do they need to demonstrate before the training is offered?</inlineHelpText>
    <label>Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>